--- a/CONFIG
+++ b/CONFIG
@@ -89,3 +89,6 @@ CONFIG_VIRTIO?=y
 
 # Build with NVML backends
 CONFIG_NVML?=n
+
+# Force MMIO doorbell write for each completion.
+CONFIG_NVME_FORCE_DOORBELL?=n
