vhost: spdk dpdk sync
SPDK vhost library synchronization with current DPDK master.

All files from DPDK are included. In this draft some workarounds
are used to avoid compilation conflicts

Change-Id: I49f83d2afe060b0a230ead5826c99be1cec08ee0
Signed-off-by: Tomasz Kulasek <tomaszx.kulasek@intel.com>

--- a/lib/vhost/rte_vhost/Makefile
+++ b/lib/vhost/rte_vhost/Makefile
@@ -39,7 +39,7 @@ CFLAGS += $(ENV_CFLAGS)
 CFLAGS += -include rte_config.h
 
 # These are the DPDK vhost files copied (for now) into SPDK
-C_SRCS += fd_man.c socket.c vhost_user.c vhost.c
+C_SRCS += fd_man.c iotlb.c socket.c vhost_user.c vhost.c virtio_net.c
 
 LIBNAME = rte_vhost
 
